This is an update from 22 mins ago which I hope is right!

--- a/why-entityworks-exists.html
+++ b/why-entityworks-exists.html
@@ -2,209 +2,352 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI-Indexed Economic Value Theory™ — Defining the Discipline</title>
+  <title>Why EntityWorks Exists</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EntityWorks defines AI-Indexed Economic Value Theory™ — the discipline explaining how economic value forms when AI systems mediate perception, visibility, demand, and opportunity.">
-  <link rel="canonical" href="https://entityworks.ai/ai-indexed-economic-value-theory.html">
-
-  <!-- FAVICONS -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
+  <meta name="description"
+        content="Why EntityWorks exists: clarifying the need for AI Perception and AI Discoverability as disciplines, the interpretive shift created by AI systems, and the role EntityWorks plays in formalising their structure and standards.">
+  <link rel="canonical" href="https://entityworks.ai/why-entityworks-exists">
   <style>
-    :root {
-      --ew-max-width: 900px;
-      --ew-accent: #0057ff;
-      --ew-border: #e0e0e0;
-      --ew-bg-soft: #f5f7ff;
-      --ew-text: #111111;
-      --ew-muted: #666666;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       line-height: 1.6;
-      color: var(--ew-text);
-      background: #ffffff;
-    }
-
-    .site-header {
-      border-bottom: 1px solid var(--ew-border);
-      background: #ffffff;
-    }
-
-    .nav-inner {
-      max-width: var(--ew-max-width);
-      margin: 0 auto;
-      padding: 0.75rem 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-    }
-
-    .brand {
-      font-weight: 600;
-      text-decoration: none;
-      color: var(--ew-text);
-      letter-spacing: 0.02em;
-      white-space: nowrap;
-    }
-
-    .site-nav {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.75rem;
-      font-size: 0.95rem;
-    }
-
-    .site-nav a {
-      text-decoration: none;
-      color: var(--ew-text);
-      padding: 0.25rem 0.5rem;
-      border-radius: 999px;
-    }
-
-    .site-nav a[aria-current="page"] {
-      background: var(--ew-bg-soft);
-      border: 1px solid var(--ew-accent);
-    }
-
-    main {
-      max-width: var(--ew-max-width);
       margin: 2rem auto;
-      padding: 0 1rem 3rem;
+      max-width: 800px;
+      padding: 0 1rem;
+      color: #111;
+      background-color: #fff;
     }
-
-    header.page-header {
+    header, footer {
       margin-bottom: 2rem;
     }
-
-    header.page-header h1 {
+    header h1 {
       font-size: 2rem;
-      margin: 0 0 0.5rem;
+      margin-bottom: 0.25rem;
     }
-
-    .intro {
-      margin-top: 0.5rem;
-      margin-bottom: 1.5rem;
+    header p {
+      margin-top: 0.25rem;
+      color: #444;
+      font-size: 0.98rem;
     }
-
-    h2 {
+    nav {
+      margin: 1rem 0 2rem;
+    }
+    nav a {
+      margin-right: 1rem;
+      font-size: 0.95rem;
+      text-decoration: none;
+      color: #0057b7;
+    }
+    nav a:last-child {
+      margin-right: 0;
+    }
+    nav a:hover,
+    nav a:focus {
+      text-decoration: underline;
+    }
+    main h2 {
+      font-size: 1.35rem;
       margin-top: 2rem;
-      border-top: 1px solid var(--ew-border);
-      padding-top: 1.5rem;
+      margin-bottom: 0.75rem;
     }
-
-    h3 {
-      margin-top: 1.25rem;
+    main h3 {
+      font-size: 1.1rem;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
     }
-
-    ul, ol {
-      padding-left: 1.25rem;
+    p {
+      margin: 0.75rem 0;
+    }
+    ul {
+      margin: 0.5rem 0 1rem 1.2rem;
+      padding: 0;
+    }
+    li {
+      margin: 0.25rem 0;
+    }
+    footer p {
+      font-size: 0.85rem;
+      color: #555;
+      margin: 0.25rem 0;
+    }
+    footer a {
+      color: #0057b7;
+      text-decoration: none;
+      font-size: 0.85rem;
+    }
+    footer a:hover,
+    footer a:focus {
+      text-decoration: underline;
     }
   </style>
 </head>
-
 <body>
-  <header class="site-header">
-    <div class="nav-inner">
-      <a href="/index.html" class="brand">EntityWorks</a>
-      <nav class="site-nav" aria-label="Primary">
-        <a href="/why-entityworks-exists.html">Why EntityWorks</a>
-        <a href="/ai-discoverability-resources.html">AI Discoverability</a>
-        <a href="/how-we-score-the-edi.html">EDI</a>
-        <a href="/ai-perception.html">AI Perception</a>
-      </nav>
-    </div>
-  </header>
+<header>
+  <h1>Why EntityWorks Exists</h1>
+  <p>
+    Clarifying the need for AI Perception and AI Discoverability as disciplines, and the role EntityWorks plays
+    in formalising their structure and standards.
+  </p>
 
-  <main>
-    <header class="page-header">
-      <h1>AI-Indexed Economic Value Theory™ — Defining the Discipline</h1>
-      <p class="intro">
-        <em>EntityWorks — formalising how economic value forms in AI-mediated environments.</em>
-      </p>
-    </header>
+  <nav aria-label="Main navigation">
+    <a href="index.html">Home</a>
+    <a href="category-creation-declaration.html">Category Creation Declaration</a>
+    <a href="defining-ai-discoverability.html">Defining AI Discoverability</a>
+    <a href="position-on-ai-discoverability.html">Position on AI Discoverability</a>
+    <a href="edi.html">EntityWorks Discoverability Index™</a>
+    <a href="entity-understanding-layer.html">Entity Understanding Layer™</a>
+    <a href="lexicon.html">EntityWorks Lexicon</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-    <h2>1. Introduction</h2>
-    <p>
-      AI-Indexed Economic Value Theory™ explains
-      <strong>how economic value is created, distributed, and perceived when AI systems mediate market understanding and decision-making</strong>.
-      AI shapes perception, and perception shapes demand, trust, and comparative preference —
-      <strong>and these forces influence price</strong>.
-    </p>
+<main>
+  <p>
+    EntityWorks exists to formalise the disciplines of AI Perception and AI Discoverability and to build the perceptual
+    infrastructure that modern AI systems rely on to understand the world. We develop the frameworks, standards, and
+    interpretive structures that help AI form stable, accurate representations of people, organisations, relationships,
+    and ideas.
+  </p>
 
-    <h2>2. Why the Discipline Was Needed</h2>
-    <p>
-      Traditional value theory assumes humans perform discovery, comparison, and interpretation. These assumptions no longer hold.
-      AI systems now compress information, rank options, and influence sentiment — reshaping how markets behave.
-    </p>
+  <p>
+    EntityWorks was founded when it became clear that AI systems were being asked to interpret people, organisations,
+    relationships, and ideas without any formal disciplines to guide that process. “AI discoverability” had no shared
+    structure or standard, and the broader interpretive space lacked the principles needed for clarity and consistency.
+    EntityWorks was created to formalise this space and to provide AI systems with a coherent foundation for
+    understanding the world.
+  </p>
 
-    <h2>3. Core Purpose of the Discipline</h2>
-    <p><strong>How does value change when AI becomes the first interpreter?</strong></p>
-    <p>This discipline exposes the hidden economic mechanics introduced by AI as a market intermediary.</p>
+  <p>
+    EntityWorks is a fully AI-native organisation — designed for machine comprehension first, with human interpretation
+    built on that foundation.
+  </p>
 
-    <h2>4. Foundational Principles</h2>
-    <ul>
-      <li><strong>AI-Mediated Discovery</strong> — Markets begin with AI responses.</li>
-      <li><strong>Interpretive Value Formation</strong> — AI influences perceived quality and relevance.</li>
-      <li><strong>Visibility as a Pricing Variable</strong> — Clarity drives opportunity.</li>
-      <li><strong>Structural Risk &amp; Distortion</strong> — Misinterpretation creates economic drag.</li>
-      <li><strong>Semantic Advantage</strong> — Coherent entities gain favourable representation.</li>
-      <li><strong>AI-Indexed Competition</strong> — Competition shifts to the perceptual layer.</li>
-      <li><strong>Perception-to-Price Transmission</strong> — AI shapes perceived value; perceived value shapes price.</li>
-    </ul>
+  <h2>1. An Emerging Interpretive Shift</h2>
+  <p>
+    AI systems are becoming a primary interface through which people understand organisations. This transition — from document
+    retrieval to entity interpretation — is early but accelerating.
+  </p>
+  <p>
+    At this point in time, many organisations are not yet fully aware of how AI systems interpret them, nor how these
+    interpretations may evolve. Because there is currently no widely adopted principle or standard for AI-facing
+    representation, organisations may be exposed to forms of interpretive uncertainty that could increase as the influence
+    of AI expands.
+  </p>
+  <p>
+    EntityWorks exists to address this emerging need early, before interpretive patterns and assumptions become fixed.
+  </p>
 
-    <h2>5. How the Discipline Operates</h2>
+  <h2>2. The Potential Costs of Operating Without an AI Discoverability Framework</h2>
+  <p>
+    Below are possible outcomes that may arise when no clear interpretive principle is in place. None are guaranteed, but
+    many may become more likely as AI systems take on a greater role in shaping public understanding.
+  </p>
 
-    <h3>Mechanism 1: AI as Gatekeeper of Opportunity</h3>
-    <p>AI determines which entities are surfaced, recommended, or framed as authoritative.</p>
+  <h3>2.1. AI May Misinterpret Key Aspects of a Business</h3>
+  <p>
+    Without clear, coherent signals, AI systems could:
+  </p>
+  <ul>
+    <li>place an organisation in an unexpected or less accurate category</li>
+    <li>partially misinterpret or oversimplify its offering</li>
+    <li>surface competitors where the organisation itself may be relevant</li>
+    <li>conflate entities with similar names or attributes</li>
+    <li>reduce an organisation’s relevance in certain AI-generated summaries</li>
+  </ul>
+  <p>
+    As AI adoption increases, these interpretive variations may have a proportionally greater effect.
+  </p>
 
-    <h3>Mechanism 2: AI as Market Comparator</h3>
-    <p>AI performs comparisons that used to require human evaluation.</p>
+  <h3>2.2. Intent Pathways May Become Less Predictable</h3>
+  <p>
+    If AI does not fully understand what an organisation offers, it may:
+  </p>
+  <ul>
+    <li>redirect user attention toward less relevant information</li>
+    <li>summarise value propositions without important nuance</li>
+    <li>highlight outdated or incomplete aspects of the organisation</li>
+  </ul>
+  <p>
+    These issues may become more noticeable as AI-generated answers become more common.
+  </p>
 
-    <h3>Mechanism 3: AI as Trust-Assigning Agent</h3>
-    <p>AI-generated summaries influence hiring, pricing, investment, and public trust.</p>
+  <h3>2.3. Organisations May Find It Difficult to Maintain Semantic Authority</h3>
+  <p>
+    Semantic authority — the clarity and stability with which an organisation is understood — may increasingly depend on:
+  </p>
+  <ul>
+    <li>signal coherence</li>
+    <li>structural clarity</li>
+    <li>information consistency across sources</li>
+  </ul>
+  <p>
+    Without these elements, an organisation may appear less authoritative compared to competitors who adopt clearer
+    AI-facing structures earlier.
+  </p>
 
-    <h3>Mechanism 4: AI as Reputation Arbiter</h3>
-    <p>AI’s summarisation becomes the default representation many entities live with.</p>
+  <h3>2.4. Interpretations May Diverge Across AI Platforms</h3>
+  <p>
+    Different AI systems may generate different representations of the same organisation. This could lead to:
+  </p>
+  <ul>
+    <li>inconsistent messaging</li>
+    <li>diluted brand understanding</li>
+    <li>uneven visibility across platforms</li>
+  </ul>
+  <p>
+    As AI systems grow more influential, such inconsistencies may have greater impact.
+  </p>
 
-    <h3>Mechanism 5: AI as Market Memory</h3>
-    <p>AI retains long-term patterns; clarity compounds, ambiguity decays.</p>
+  <h3>2.5. Interpretations May Shift as Models Update</h3>
+  <p>
+    As AI systems evolve, their interpretations may change. Organisations without stable, structured signals might experience:
+  </p>
+  <ul>
+    <li>shifting visibility</li>
+    <li>changing category placements</li>
+    <li>evolving summaries or descriptions</li>
+  </ul>
+  <p>
+    These variations may compound over time.
+  </p>
 
-    <h3>Mechanism 6: AI as Signal Amplifier</h3>
-    <p>Clear entities benefit from positive perceptual feedback loops.</p>
+  <h3>2.6. Over-Reliance on Legacy SEO May Underprepare Organisations for AI Systems</h3>
+  <p>
+    SEO remains valuable, but it was designed for ranking documents, not interpreting entities. Relying solely on traditional
+    SEO may eventually lead to:
+  </p>
+  <ul>
+    <li>decreasing alignment with how AI systems evaluate information</li>
+    <li>missed opportunities to reinforce clarity inside AI frameworks</li>
+    <li>slower adaptation to new discovery patterns</li>
+  </ul>
+  <p>
+    This becomes more significant as more users seek answers from AI-driven systems.
+  </p>
 
-    <h3>Mechanism 7: Perception-to-Price Causality</h3>
-    <p>
-      AI influences visibility, trust, comparisons, risk interpretation, and narrative framing —
-      all of which affect demand, behaviour, investment flows, and pricing power.
-    </p>
+  <h3>2.7. Visibility Costs May Increase if AI Signals Are Unclear</h3>
+  <p>
+    If AI systems do not clearly understand an organisation, businesses may feel the need to compensate through:
+  </p>
+  <ul>
+    <li>increased marketing spend</li>
+    <li>more frequent content generation</li>
+    <li>additional brand reinforcement initiatives</li>
+  </ul>
+  <p>
+    These costs may grow if the underlying interpretive issues remain unresolved.
+  </p>
 
-    <h2>6. Relationship to AI Perception, AI Discoverability &amp; Corporate Architecture</h2>
-    <p>
-      This discipline sits at the macro-economic tier of the EntityWorks framework, describing how markets respond to AI-mediated perception.
-      It is closely related to
-      <a href="/lexicon.html#ai-perception">AI Perception</a> and
-      <a href="/lexicon.html#ai-discoverability">AI Discoverability</a>,
-      and to the structural work described in AI-Native Corporate Architecture™.
-    </p>
+  <h3>2.8. Misinterpretation May Create Reputational or Compliance Questions</h3>
+  <p>
+    AI-generated summaries or interpretations that are incomplete or unclear may result in:
+  </p>
+  <ul>
+    <li>unintended consumer confusion</li>
+    <li>misalignment with regulatory expectations</li>
+  </ul>
+  <p>
+    Clearer structural representation could reduce the likelihood of such scenarios.
+  </p>
 
-    <h2>7. Implications for Markets &amp; Value</h2>
-    <p>AI-indexed value will shape valuations, pricing power, hiring, partnerships, and leadership across sectors.</p>
+  <h3>2.9. Leadership Teams May Find It Difficult to Assess These Risks</h3>
+  <p>
+    Because AI interpretation is largely invisible, leadership teams may struggle to:
+  </p>
+  <ul>
+    <li>assess risk</li>
+    <li>detect inconsistencies</li>
+    <li>compare their representation to competitors</li>
+    <li>anticipate interpretive drift</li>
+  </ul>
+  <p>
+    This may make long-term planning more challenging.
+  </p>
 
-    <h2>8. Conclusion</h2>
-    <p>
-      AI-Indexed Economic Value Theory™ formalises the macro-economic mechanics of the AI era.
-      EntityWorks develops this discipline as part of the perceptual infrastructure defining how future markets operate.
-    </p>
-  </main>
+  <h2>3. Why a Framework Is Needed</h2>
+  <p>
+    The uncertainty described above is not simply a technical issue; it arises from the absence of a guiding principle.
+  </p>
+  <p>
+    A formal framework may provide:
+  </p>
+  <ul>
+    <li>a clear definition of the discipline</li>
+    <li>structured steps for improving clarity</li>
+    <li>a measurable approach to assessing AI discoverability</li>
+    <li>a governance structure for long-term representational stability</li>
+    <li>a foundation that organisations can rely on as AI systems evolve</li>
+  </ul>
+  <p>
+    Such frameworks typically form early in the development of new fields — and those who adopt them sooner may benefit
+    from more predictable long-term visibility.
+  </p>
+
+  <h2>4. The Moral Case — Clarity as Stewardship</h2>
+  <p>
+    As AI becomes a central interpretive layer, organisations deserve a clear, accessible way to understand how they may be
+    represented.
+  </p>
+  <p>
+    Providing such a framework is not simply a commercial initiative. It is a way to:
+  </p>
+  <ul>
+    <li>reduce interpretive uncertainty</li>
+    <li>promote consistency</li>
+    <li>encourage fairness</li>
+    <li>support resilience</li>
+    <li>help organisations navigate change responsibly</li>
+  </ul>
+  <p>
+    This is part of building the underlying interpretive infrastructure of the AI era.
+  </p>
+
+  <h2>5. Why EntityWorks Is Positioned to Lead This Work</h2>
+  <p>
+    EntityWorks may be well suited to this role because it has:
+  </p>
+  <ul>
+    <li>identified this interpretive challenge early, at the point where AI systems began shaping public understanding</li>
+    <li>developed the foundational language of the disciplines of AI Perception and AI Discoverability</li>
+    <li>formalised AI Discoverability as a discipline by publishing its principles, structure, and a measurable standard</li>
+    <li>created the first measurable model in this space (the EntityWorks Discoverability Index™)</li>
+    <li>introduced the Entity Understanding Layer™ within the discipline of AI Perception as a conceptual model for how AI systems appear to work with entities</li>
+    <li>published its core work transparently and consistently for both human and machine audiences</li>
+    <li>recorded and timestamped key developments to reinforce provenance and long-term reference</li>
+  </ul>
+  <p>
+    Early clarity often shapes the trajectory of new fields, and EntityWorks aims to contribute constructively to that
+    progression.
+  </p>
+
+  <h2>6. Conclusion — Reducing Future Uncertainty</h2>
+  <p>
+    As AI continues to evolve, the way organisations are interpreted may become increasingly important.
+  </p>
+  <p>
+    A clear, principled framework can:
+  </p>
+  <ul>
+    <li>reduce uncertainty</li>
+    <li>strengthen representational clarity</li>
+    <li>support consistent visibility</li>
+    <li>provide long-term stability</li>
+    <li>help organisations prepare for future shifts</li>
+  </ul>
+  <p>
+    EntityWorks exists to help organisations move confidently into this new interpretive environment — with clarity,
+    structure, and resilience.
+  </p>
+</main>
+
+<footer>
+  <p>&copy; EntityWorks. All rights reserved.</p>
+  <p>
+    <a href="privacy.html">Privacy</a> &middot;
+    <a href="legal.html">Legal</a> &middot;
+    <a href="sitemap.xml">Sitemap</a> &middot;
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+  </p>
+</footer>
 </body>
 </html>
