--- a/index.html
+++ b/index.html
@@ -15,51 +15,82 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
   <style>
+    :root {
+      --ew-max-width: 900px;
+      --ew-accent: #0057ff;
+      --ew-border: #e0e0e0;
+      --ew-bg-soft: #f5f7ff;
+      --ew-text: #111111;
+      --ew-muted: #666666;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       line-height: 1.6;
-      margin: 2rem auto;
-      max-width: 800px;
-      padding: 0 1rem;
-      color: #111;
+      color: var(--ew-text);
+      background: #ffffff;
     }
-    header, footer {
-      margin-bottom: 2rem;
+
+    /* Global site header / nav (matches other pages) */
+    .site-header {
+      border-bottom: 1px solid var(--ew-border);
+      background: #ffffff;
     }
-    nav {
-      margin-top: 0.5rem;
-      text-align: left;
-    }
-    nav a {
-      margin-right: 1rem;
-      font-size: 0.95rem;
-      text-decoration: none;
-      color: #0057ff;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    h2 {
-      margin-top: 1.75rem;
-      margin-bottom: 0.5rem;
-    }
-    ul {
-      margin: 0.5rem 0 1rem 1.2rem;
-      padding: 0;
-    }
-    li {
-      margin: 0.25rem 0;
-    }
-    .highlight {
+
+    .nav-inner {
+      max-width: var(--ew-max-width);
+      margin: 0 auto;
       padding: 0.75rem 1rem;
-      border-left: 3px solid #0057ff;
-      background: #f5f7ff;
-      margin: 1.5rem 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
     }
+
+    .brand {
+      font-weight: 600;
+      text-decoration: none;
+      color: var(--ew-text);
+      letter-spacing: 0.02em;
+      white-space: nowrap;
+    }
+
+    .site-nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      font-size: 0.95rem;
+    }
+
+    .site-nav a {
+      text-decoration: none;
+      color: var(--ew-text);
+      padding: 0.25rem 0.5rem;
+      border-radius: 999px;
+    }
+
+    .site-nav a[aria-current="page"] {
+      background: var(--ew-bg-soft);
+      border: 1px solid var(--ew-accent);
+    }
+
+    main {
+      max-width: var(--ew-max-width);
+      margin: 2rem auto;
+      padding: 0 1rem 3rem;
+    }
+
+    /* Hero block */
     .hero {
       max-width: 36rem;
       margin: 3rem auto 3.5rem auto;
     }
+
     .hero-mission {
       font-size: 1.35rem;
       line-height: 1.55;
@@ -68,6 +99,35 @@
       color: #111;
       text-align: left;
       margin: 0;
+    }
+
+    h2 {
+      margin-top: 1.75rem;
+      margin-bottom: 0.5rem;
+    }
+
+    ul {
+      margin: 0.5rem 0 1rem 1.2rem;
+      padding: 0;
+    }
+
+    li {
+      margin: 0.25rem 0;
+    }
+
+    .highlight {
+      padding: 0.75rem 1rem;
+      border-left: 3px solid #0057ff;
+      background: #f5f7ff;
+      margin: 1.5rem 0;
+    }
+
+    .last-updated {
+      font-size: 0.85rem;
+      color: var(--ew-muted);
+      max-width: var(--ew-max-width);
+      margin: 0 auto 0;
+      padding: 0 1rem;
     }
   </style>
 
@@ -99,26 +159,26 @@
 </head>
 
 <body>
-  <header>
-    <div class="hero">
+  <!-- Global site header / nav -->
+  <header class="site-header">
+    <div class="nav-inner">
+      <a href="/index.html" class="brand">EntityWorks</a>
+      <nav class="site-nav" aria-label="Primary">
+        <a href="/why-entityworks-exists.html">Why EntityWorks</a>
+        <a href="/ai-discoverability-resources.html">AI Discoverability</a>
+        <a href="/how-we-score-the-edi.html">EDI</a>
+        <a href="/ai-perception.html">AI Perception</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <header class="hero">
       <p class="hero-mission">
         EntityWorks exists to define the discipline of AI Perception and to build
         the structures AI systems will increasingly rely on to understand the world.
       </p>
-    </div>
-
-    <nav>
-      <a href="/">Home</a>
-      <a href="/category-creation-declaration.html">Category Declaration</a>
-      <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
-      <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
-      <a href="/discoverability-index.html">Discoverability Index</a>
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
-      <a href="/lexicon.html">Lexicon</a>
-    </nav>
-  </header>
-
-  <main>
+    </header>
 
     <!-- INTRO / ORIGIN -->
     <section>
@@ -228,7 +288,7 @@
 
   </main>
 
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
+  <p class="last-updated">
     Last updated: November 2025
   </p>
 
