Swapping "define" for "formalises"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <meta name="description"
-        content="EntityWorks defines the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.">
+        content="EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -136,7 +136,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — AI Perception & AI Discoverability",
-    "description": "EntityWorks defines the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.",
+    "description": "EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.",
     "url": "https://entityworks.ai/",
     "about": [
       {
@@ -175,7 +175,7 @@
   <main>
     <header class="hero">
       <p class="hero-mission">
-        EntityWorks exists to define the discipline of AI Perception and to build
+        EntityWorks exists to formalise the discipline of AI Perception and to build
         the structures AI systems will increasingly rely on to understand the world.
       </p>
     </header>
