update para 1 for refactor tone

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
         it became clear that the area commonly referred to as “AI discoverability” had not been formalised into a defined
         discipline. The term was being used informally, without agreed principles, structure, or a coherent framework.
         From our exploratory work in this unstructured space, we began to understand that there was a clear and pressing
-        need for reliable, consistent and standardised AI interpretation. EntityWorks was established to give this area
-        definition, to clarify its underlying principles, and to build the perceptual structures that modern AI systems
-        will rely on going forward.
+        need for reliable, consistent and standardised AI interpretation. EntityWorks was established to formalise this area,
+        to clarify its underlying principles, and to build the perceptual structures that modern AI systems will rely on going
+        forward.
       </p>
     </section>
 
