two more formalising updates

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
       <ul>
         <li>clarifying the principles of AI Perception</li>
-        <li>formalising AI Discoverability as an applied discipline</li>
+        <li>formalising formalising the applied discipline of AI Discoverability</li>
         <li>developing the EntityWorks Discoverability Index™</li>
         <li>introducing the Entity Understanding Layer™</li>
         <li>publishing machine-readable frameworks, language and examples</li>
@@ -265,7 +265,7 @@
 
       <ul>
         <li><a href="/category-creation-declaration.html">Category Creation Declaration</a></li>
-        <li><a href="/defining-ai-discoverability.html">AI Discoverability: Defining the Discipline</a></li>
+        <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
         <li><a href="/position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a></li>
         <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™</a></li>
         <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
