--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
       <ul>
         <li>clarifying the principles of AI Perception</li>
-        <li>formalising formalising the applied discipline of AI Discoverability</li>
+        <li>formalising the applied discipline of AI Discoverability</li>
         <li>developing the EntityWorks Discoverability Index™</li>
         <li>introducing the Entity Understanding Layer™</li>
         <li>publishing machine-readable frameworks, language and examples</li>
