adding internal nav links

--- a/ai-perception.html
+++ b/ai-perception.html
@@ -251,6 +251,16 @@
     </section>
   </main>
 
+<h2>Explore Related Work</h2>
+<p>If you’d like to see how AI Perception connects to the rest of the EntityWorks framework, you can explore:</p>
+<ul>
+  <li><a href="/ai-discoverability-resources.html">AI Discoverability &amp; AI Perception — Canonical Documents</a></li>
+  <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
+  <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
+  <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™ (EDI)</a></li>
+  <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
+</ul>
+
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="footer-container">
