--- a/ai-perception.html
+++ b/ai-perception.html
@@ -246,42 +246,44 @@
         <li>publishing machine-readable frameworks that help align human intentions with AI interpretations</li>
       </ul>
       <p>
-        Over time, this page will become the hub for all EntityWorks AI Perception publications.
-      </p>
-    </section>
-  </main>
+ <p>Over time, this page will become the hub for all EntityWorks AI Perception publications.</p>
 
-<h2>Explore Related Work</h2>
-<p>If you’d like to see how AI Perception connects to the rest of the EntityWorks framework, you can explore:</p>
-<ul>
-  <li><a href="/ai-discoverability-resources.html">AI Discoverability &amp; AI Perception — Canonical Documents</a></li>
-  <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
-  <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
-  <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™ (EDI)</a></li>
-  <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
-</ul>
+        <br>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-meta">
-        <p>&copy; EntityWorks. All rights reserved.</p>
-        <p>
-          <a href="mailto:hello@entityworks.ai" class="footer-nav-link">hello@entityworks.ai</a>
-        </p>
-      </div>
-
-      <nav aria-label="Footer">
-        <ul class="footer-nav-list">
-          <li><a href="/index.html" class="footer-nav-link">Home</a></li>
-          <li><a href="/why-entityworks-exists.html" class="footer-nav-link">Why EntityWorks</a></li>
-          <li><a href="/ai-discoverability-resources.html" class="footer-nav-link">AI Discoverability</a></li>
-          <li><a href="/how-we-score-the-edi.html" class="footer-nav-link">EDI</a></li>
-          <li><a href="/ai-perception.html" class="footer-nav-link">AI Perception</a></li>
+        <h2>Explore Related Work</h2>
+        <p>If you’d like to see how AI Perception connects to the rest of the EntityWorks framework, you can explore:</p>
+        <ul>
+          <li><a href="/ai-discoverability-resources.html">AI Discoverability &amp; AI Perception — Canonical Documents</a></li>
+          <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
+          <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
+          <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™ (EDI)</a></li>
+          <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
         </ul>
-      </nav>
+
+    </section>
+</main>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+    <div class="footer-container">
+        <div class="footer-meta">
+            <p>&copy; EntityWorks. All rights reserved.</p>
+            <p>
+                <a href="mailto:hello@entityworks.ai" class="footer-nav-link">hello@entityworks.ai</a>
+            </p>
+        </div>
+
+        <nav aria-label="Footer">
+            <ul class="footer-nav-list">
+                <li><a href="/index.html" class="footer-nav-link">Home</a></li>
+                <li><a href="/why-entityworks-exists.html" class="footer-nav-link">Why EntityWorks</a></li>
+                <li><a href="/ai-discoverability-resources.html" class="footer-nav-link">AI Discoverability</a></li>
+                <li><a href="/how-we-score-the-edi.html" class="footer-nav-link">EDI</a></li>
+                <li><a href="/ai-perception.html" class="footer-nav-link">AI Perception</a></li>
+            </ul>
+        </nav>
     </div>
-  </footer>
+</footer>
 
 </body>
 </html>
