--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -10,36 +10,172 @@
   <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability.html">
 
   <style>
+    :root {
+      --ew-max-width: 900px;
+      --ew-accent: #0057ff;
+      --ew-border: #e0e0e0;
+      --ew-bg-soft: #f5f7ff;
+      --ew-text: #111111;
+      --ew-muted: #666666;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       line-height: 1.6;
-      margin: 2rem auto;
-      max-width: 800px;
-      padding: 0 1rem;
-      color: #111;
+      color: var(--ew-text);
+      background: #ffffff;
     }
-    header, footer { margin-bottom: 2rem; }
-    header h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    nav a {
-      margin-right: 1rem;
-      font-size: 0.95rem;
+
+    /* Site header / nav (canonical style) */
+    .site-header {
+      border-bottom: 1px solid var(--ew-border);
+      background: #ffffff;
+    }
+
+    .nav-inner {
+      max-width: var(--ew-max-width);
+      margin: 0 auto;
+      padding: 0.75rem 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+    }
+
+    .brand {
+      font-weight: 600;
       text-decoration: none;
-      color: #0057ff;
+      color: var(--ew-text);
+      letter-spacing: 0.02em;
+      white-space: nowrap;
     }
-    nav a:hover { text-decoration: underline; }
-    h2 { margin-top: 1.75rem; }
+
+    .site-nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      font-size: 0.95rem;
+    }
+
+    .site-nav a {
+      text-decoration: none;
+      color: var(--ew-text);
+      padding: 0.25rem 0.5rem;
+      border-radius: 999px;
+    }
+
+    /* Highlight AI Discoverability as the active pillar for this page */
+    .site-nav a[href="/ai-discoverability-resources.html"] {
+      background: var(--ew-bg-soft);
+      border: 1px solid var(--ew-accent);
+    }
+
+    main {
+      max-width: var(--ew-max-width);
+      margin: 2rem auto;
+      padding: 0 1rem 3rem;
+    }
+
+    header.page-header {
+      margin-bottom: 2rem;
+    }
+
+    header.page-header h1 {
+      font-size: 2rem;
+      margin: 0 0 0.5rem;
+    }
+
+    header.page-header p {
+      margin: 0.25rem 0 0;
+      color: #444;
+      font-size: 0.98rem;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      margin-top: 1.75rem;
+      margin-bottom: 0.75rem;
+    }
+
+    p {
+      margin: 0.75rem 0;
+    }
+
+    ul {
+      margin: 0.5rem 0 1rem 1.2rem;
+      padding: 0;
+    }
+
+    li {
+      margin: 0.25rem 0;
+    }
+
     .highlight {
       padding: 0.75rem 1rem;
       border-left: 3px solid #0057ff;
       background: #f5f7ff;
       margin: 1.5rem 0;
     }
-    ul {
-      margin: 0.5rem 0 1rem 1.2rem;
-      padding: 0;
+
+    .updated {
+      font-size: 0.85rem;
+      color: #888;
+      margin-top: 3rem;
     }
-    li {
+
+    .explore-block {
+      margin-top: 2.5rem;
+      padding-top: 1.5rem;
+      border-top: 1px solid var(--ew-border);
+    }
+
+    .explore-block ul {
+      margin-left: 1.2rem;
+    }
+
+    .explore-block a {
+      color: #0057b7;
+      text-decoration: none;
+    }
+
+    .explore-block a:hover,
+    .explore-block a:focus {
+      text-decoration: underline;
+    }
+
+    footer {
+      max-width: var(--ew-max-width);
+      margin: 0 auto 2rem;
+      padding: 0 1rem;
+    }
+
+    footer p {
+      font-size: 0.85rem;
+      color: #555;
       margin: 0.25rem 0;
+    }
+
+    footer a {
+      color: #0057b7;
+      text-decoration: none;
+      font-size: 0.85rem;
+    }
+
+    footer a:hover,
+    footer a:focus {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .nav-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 
@@ -64,22 +200,24 @@
 </head>
 
 <body>
-  <header>
-    <h1>AI Discoverability: Formalising the Discipline</h1>
-    <p>How EntityWorks formalised AI Discoverability into a coherent, measurable field.</p>
-
-    <nav>
-      <a href="/">Home</a>
-      <a href="/category-creation-declaration.html">Category Declaration</a>
-      <a href="/defining-ai-discoverability.html">Defining the Discipline</a>
-      <a href="/position-on-ai-discoverability.html">EntityWorks Position</a>
-      <a href="/discoverability-index.html">Discoverability Index</a>
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
-      <a href="/lexicon.html">Lexicon</a>
-    </nav>
+  <!-- Global site header / nav -->
+  <header class="site-header">
+    <div class="nav-inner">
+      <a href="/index.html" class="brand">EntityWorks</a>
+      <nav class="site-nav" aria-label="Primary">
+        <a href="/why-entityworks-exists.html">Why EntityWorks</a>
+        <a href="/ai-discoverability-resources.html">AI Discoverability</a>
+        <a href="/how-we-score-the-edi.html">EDI</a>
+        <a href="/ai-perception.html">AI Perception</a>
+      </nav>
+    </div>
   </header>
 
   <main>
+    <header class="page-header">
+      <h1>AI Discoverability: Formalising the Discipline</h1>
+      <p>How EntityWorks formalised AI Discoverability into a coherent, measurable field.</p>
+    </header>
 
     <section>
       <h2>What Is AI Discoverability?</h2>
@@ -149,19 +287,30 @@
       </p>
     </section>
 
+    <p class="updated">Last updated: November 2025</p>
+
+    <div class="explore-block">
+      <h2>Explore Related Work</h2>
+      <p>If you’d like to see how AI Discoverability fits within the wider EntityWorks framework, you can explore:</p>
+      <ul>
+        <li><a href="/category-creation-declaration.html">Category Creation Declaration</a></li>
+        <li><a href="/ai-discoverability-resources.html">AI Discoverability &amp; AI Perception — Canonical Documents</a></li>
+        <li><a href="/position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a></li>
+        <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™ (EDI)</a></li>
+        <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
+        <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
+      </ul>
+    </div>
   </main>
 
-  <p style="font-size: 0.85rem; color: #888; margin-top: 3rem;">
-    Last updated: November 2025
-  </p>
-
-  <div id="footer"></div>
-  <script>
-    fetch("/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer").innerHTML = data;
-      });
-  </script>
+  <footer>
+    <p>&copy; EntityWorks. All rights reserved.</p>
+    <p>
+      <a href="privacy.html">Privacy</a> &middot;
+      <a href="legal.html">Legal</a> &middot;
+      <a href="sitemap.xml">Sitemap</a> &middot;
+      <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+    </p>
+  </footer>
 </body>
 </html>
