--- a/category-creation-declaration.html
+++ b/category-creation-declaration.html
@@ -171,6 +171,13 @@
     footer a:focus {
       text-decoration: underline;
     }
+
+    @media (max-width: 600px) {
+      .nav-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
   </style>
 
   <script type="application/ld+json">
@@ -248,14 +255,6 @@
       </p>
     </section>
 
-    <hr>
-    <p><strong>Related:</strong>
-      <a href="/why-entityworks-exists.html">Why EntityWorks Exists</a> ·
-      <a href="/ai-discoverability-resources.html">AI Discoverability Resources</a> ·
-      <a href="/entity-understanding-layer.html">Entity Understanding Layer™</a>
-    </p>
-    <hr>
-
     <section>
       <h2>Why AI Discoverability Matters</h2>
 
@@ -300,12 +299,13 @@
 
     <div class="explore-block">
       <h2>Explore Related Work</h2>
-      <p>If you’d like to see how AI Perception connects to the rest of the EntityWorks framework, you can explore:</p>
+      <p>If you’d like to see how this work connects to the wider EntityWorks framework, you can explore:</p>
       <ul>
-        <li><a href="/ai-discoverability-resources.html">AI Discoverability &amp; AI Perception — Canonical Documents</a></li>
+        <li><a href="/category-creation-declaration.html">Category Creation Declaration</a></li>
         <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
+        <li><a href="/position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a></li>
+        <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™</a></li>
         <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
-        <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™ (EDI)</a></li>
         <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
       </ul>
     </div>
